Get sample text function.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <main class="main">
       <!-- The text to be copied. -->
       <div class="sampleTextCont">
-        <button type="button">Get another sentence!</button>
-        <p>This is for the sample text!</p>
+        <button type="button" id="getTx">Get another sentence!</button>
+        <p id="sampTx">The quick brown fox jumped over the lazy dog.</p>
       </div>
       <!-- The area for typing. -->
       <div class="typingCont">
