Font scroll function added.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <!-- The area for typing. -->
       <div class="typingCont">
-        <textarea class="test_area" rows="3" placeholder="The clock will start when you start typing!"></textarea>
+        <textarea class="test_area" rows="3" placeholder="The clock will start when you start typing!" id="typeArea"></textarea>
       </div>
       <!-- The timer and the reset button. -->
       <div class="timerCont">
@@ -35,32 +35,14 @@
       </div>
       <!-- The font selection display button. -->
       <div class="fontSelectionButton">
-        <button type="button">Font Selection Button</button>
+        <button type="button" id="fontBut">Font Selection Button</button>
       </div>
       <!-- The font options. -->
       <div class="fontScrollCont" id="fontCont">
         <p class="guideMessage">Scroll, select and click!</p>
-        <div class="fontScrollItemDiv">
+        <!-- <div class="fontScrollItemDiv">
           <p class="fontItemText">A test item.</p>
-        </div>
-        <div class="fontScrollItemDiv">
-          <p class="fontItemText">A test item.</p>
-        </div>
-        <div class="fontScrollItemDiv">
-          <p class="fontItemText">A test item.</p>
-        </div>
-        <div class="fontScrollItemDiv">
-          <p class="fontItemText">A test item.</p>
-        </div>
-        <div class="fontScrollItemDiv">
-          <p class="fontItemText">A test item.</p>
-        </div>
-        <div class="fontScrollItemDiv">
-          <p class="fontItemText">A test item.</p>
-        </div>
-        <div class="fontScrollItemDiv">
-          <p class="fontItemText">A test item.</p>
-        </div>
+        </div> -->
       </div>
 
     </main>
