--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       </div>
       <!-- The font selection display button. -->
       <div class="fontSelectionButton">
-        <button type="button" id="fontBut">Font Selection Button</button>
+        <button type="button" id="fontBut">Display Font Selection</button>
       </div>
       <!-- The font options. -->
-      <div class="fontScrollCont" id="fontCont">
+      <div class="hide" id="fontCont">
         <p class="guideMessage">Scroll, select and click!</p>
         <!-- <div class="fontScrollItemDiv">
           <p class="fontItemText">A test item.</p>
