--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <p id="sampTx">The quick brown fox jumped over the lazy dog.</p>
       </div>
       <!-- The area for typing. -->
-      <div class="typingCont">
-        <textarea class="test_area" rows="3" placeholder="The clock will start when you start typing!" id="typeArea"></textarea>
+      <div class="typingCont" id="typingBG">
+        <textarea rows="3" placeholder="The clock will start when you start typing!" id="typeArea"></textarea>
       </div>
       <!-- The timer and the reset button. -->
       <div class="timerCont">
