--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Stewart MacLeman">
     <meta name="description" content="An app to assist with typing practise.">
+    <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" href="./styles.css">
     <script src="./main.js" defer></script>
 
