README.md file added.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
       <!-- The font options. -->
       <div class="hide" id="fontCont">
         <p class="guideMessage">Scroll, select and click!</p>
-        <!-- <div class="fontScrollItemDiv">
-          <p class="fontItemText">A test item.</p>
-        </div> -->
+        <!-- Font divs are added here. -->
       </div>
 
     </main>
